condensed pages and added details

--- a/html/projects.html
+++ b/html/projects.html
@@ -7,20 +7,53 @@
     <link href="../css/projects.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-    <header>
-        <nav>
-            <ul>
-                <li><a href=../index.html>Home</a></li>
-                <li><a href="about.html">About Me</a></li>
-                <li><strong>Projects</strong></li>
-                <li><a href="contact.html">Contact Me</a></li>
-            </ul>
-        </nav>
-    </header>
-    <div class="encasing-div">
-        <footer>
-            ©  <script>document.write(new Date().getFullYear())</script> Kevin Gruich
-        </footer>
-    </div>
+<header>
+    <nav>
+        <ul>
+            <li><a href=../index.html>Home</a></li>
+            <li><strong>Projects</strong></li>
+        </ul>
+    </nav>
+</header>
+<div class="encasing-div">
+    <section id="hobby">
+        <h1>
+            Personal Hobby Work
+        </h1>
+        <ul>
+            <li>None</li>
+        </ul>
+    </section>
+    <section id="school">
+        <h1>
+            University Work
+        </h1>
+        <ul>
+            <li>EECS 183
+                <ul>
+                    <li>Focaccia Bread</li>
+                    <li>Birthdays</li>
+                    <li>Ohh1</li>
+                    <li>CoolPics</li>
+                    <li>Elevators</li>
+                </ul>
+            </li>
+            <li>EECS 280
+                <ul>
+                    <li>Statistics</li>
+                    <li>Computer Vision</li>
+                    <li>Euchre</li>
+                    <li>Web Application</li>
+                    <li>Machine Learning</li>
+                </ul>
+            </li>
+        </ul>
+    </section>
+    <footer>
+        ©
+        <script>document.write(new Date().getFullYear())</script>
+        Kevin Gruich
+    </footer>
+</div>
 </body>
 </html>
