--- a/html/about.html
+++ b/html/about.html
@@ -7,32 +7,34 @@
     <link href="../css/about.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-    <header>
-        <nav>
-            <ul>
-                <li><a href=../index.html>Home</a></li>
-                <li><strong>About Me</strong></li>
-                <li><a href="projects.html">Projects</a></li>
-                <li><a href="contact.html">Contact Me</a></li>
-            </ul>
-        </nav>
-    </header>
-    <div class="encasing-div">
-        <section id="about">
-            <h1>About Me</h1>
-                <p>I am currently an undergraduate at the University of Michigan - Ann Arbor, studying Computer Science, Economics, and Japanese.</p>
-        </section>
-        <section id="about">
-            <h2>Achievements</h2>
-            <ul>
-                <li>achivement 2</li>
-                <li>achivement 2</li>
-                <li>achivement 2</li>
-            </ul>
-        </section>
-        <footer>
-            ©  <script>document.write(new Date().getFullYear())</script> Kevin Gruich
-        </footer>
-    </div>
+<header>
+    <nav>
+        <ul>
+            <li><a href=../index.html>Home</a></li>
+            <li><strong>About Me</strong></li>
+            <li><a href="projects.html">Projects</a></li>
+        </ul>
+    </nav>
+</header>
+<div class="encasing-div">
+    <section id="about">
+        <h1>About Me</h1>
+        <p>I am currently an undergraduate at the University of Michigan - Ann Arbor, studying Computer Science,
+            Economics, and Japanese.</p>
+    </section>
+    <section id="achieve">
+        <h2>Achievements</h2>
+        <ul>
+            <li>achivement 2</li>
+            <li>achivement 2</li>
+            <li>achivement 2</li>
+        </ul>
+    </section>
+    <footer>
+        ©
+        <script>document.write(new Date().getFullYear())</script>
+        Kevin Gruich
+    </footer>
+</div>
 </body>
 </html>
