--- a/html/contact.html
+++ b/html/contact.html
@@ -7,23 +7,21 @@
     <link href="../css/contact.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-    <header>
-        <nav>
-            <ul>
-                <li><a href=../index.html>Home</a></li>
-                <li><a href="about.html">About Me</a></li>
-                <li><a href="projects.html">Projects</a></li>
-                <li><strong>Contact Me</strong></li>
-            </ul>
-        </nav>
-    </header>
-    <div class="encasing-div">
-        <section>
-            <p>Feel free to send me an <a href="mailto:kgruich@umich.edu">email!</a></p>
-        </section>
-        <footer>
-            ©  <script>document.write(new Date().getFullYear())</script> Kevin Gruich
-        </footer>
-    </div>
+<header>
+    <nav>
+        <ul>
+            <li><a href=../index.html>Home</a></li>
+            <li><a href="projects.html">Projects</a></li>
+        </ul>
+    </nav>
+</header>
+<div class="encasing-div">
+
+    <footer>
+        ©
+        <script>document.write(new Date().getFullYear())</script>
+        Kevin Gruich
+    </footer>
+</div>
 </body>
 </html>
