added variables for CSS, optimized font size, image size, and heights for mobile resolutions

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta content="width=device-width, initial-scale=1" name="viewport">
     <title>Kevin Gruich</title>
     <link href="css/styles.css" rel="stylesheet">
 </head>
@@ -32,7 +33,7 @@
                 Economics, and Japanese.</p>
         </section>
         <section id="achieve">
-            <h2>Achievements</h2>
+            <h1>Achievements</h1>
             <ul>
                 <li>Recipient of the William J. Branstrom Freshman Prize,
                     an award is given annually to first year undergraduate
