--- a/html/projects.html
+++ b/html/projects.html
@@ -6,6 +6,7 @@
     <title>Projects</title>
     <link href="../css/styles.css" rel="stylesheet" type="text/css">
     <link href="../css/projects.css" rel="stylesheet" type="text/css">
+    <link href="../css/darkmode.css" rel="stylesheet">
 </head>
 <body>
 <header>
