--- a/html/404.html
+++ b/html/404.html
@@ -4,8 +4,23 @@
     <meta charset="UTF-8">
     <meta content="width=device-width, initial-scale=1" name="viewport">
     <title>404 Error</title>
+    <link href="../css/styles.css" rel="stylesheet" type="text/css">
+    <link href="../css/darkmode.css" rel="stylesheet" type="text/css">
+    <script src="../js/darkmode.js"></script>
 </head>
-<body>
+<body class="light-theme">
+<header>
+    <nav>
+        <ul>
+            <li><a href=../>Home</a></li>
+            <li><a href="projects.html">Projects</a></li>
+        </ul>
+    </nav>
+</header>
+<label class="switch">
+    <input onchange="darkModeToggle(this)" type="checkbox">+
+    <span class="slider round"></span>
+</label>
 <h1>Sorry that page doesn't exist.</h1>
 </body>
 </html>
