--- a/html/projects.html
+++ b/html/projects.html
@@ -6,9 +6,10 @@
     <title>Projects</title>
     <link href="../css/styles.css" rel="stylesheet" type="text/css">
     <link href="../css/projects.css" rel="stylesheet" type="text/css">
-    <link href="../css/darkmode.css" rel="stylesheet">
+    <link href="../css/darkmode.css" rel="stylesheet" type="text/css">
+    <script src="../js/darkmode.js"></script>
 </head>
-<body>
+<body class="light-theme">
 <header>
     <nav>
         <ul>
@@ -17,6 +18,10 @@
         </ul>
     </nav>
 </header>
+<label class="switch">
+    <input onchange="darkModeToggle(this)" type="checkbox">+
+    <span class="slider round"></span>
+</label>
 <div class="encasing-div">
     <section id="hobby">
         <h1>
