--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta content="width=device-width, initial-scale=1" name="viewport">
     <title>Kevin Gruich</title>
-    <link href="css/styles.css" rel="stylesheet">
-    <link href="css/darkmode.css" rel="stylesheet">
+    <link href="css/styles.css" rel="stylesheet" type="text/css">
+    <link href="css/darkmode.css" rel="stylesheet" type="text/css">
     <script src="js/darkmode.js"></script>
 </head>
 <body class="light-theme">
