--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta content="width=device-width, initial-scale=1" name="viewport">
-    <title>Kevin Gruich</title>
     <link href="css/styles.css" rel="stylesheet" type="text/css">
     <link href="css/darkmode.css" rel="stylesheet" type="text/css">
     <script src="js/darkmode.js"></script>
+    <title>Kevin Gruich</title>
 </head>
-<body class="light-theme">
+<body class="light-theme js-stop-transition">
 <header>
     <nav>
         <ul>
@@ -59,6 +59,7 @@
         ©
         <script>document.write(new Date().getFullYear())</script>
         Kevin Gruich
+        <script>//</script>
     </footer>
 </div>
 </body>
