Added project pages, filled in the hobby ones

--- a/html/projects.html
+++ b/html/projects.html
@@ -28,7 +28,11 @@
             Personal Hobby Work
         </h1>
         <ul>
-            <li>None</li>
+            <li><a href="project-pages/Pong.html">Ultimate Pong (Work in Progress)</a></li>
+            <li><a href="project-pages/YT.html">Video Editing Hobby YouTube Channel</a></li>
+            <li><a href="project-pages/JermaSite.html">Novelty Website to Track Delays in
+                Livestreaming (On Hold)</a></li>
+            <li><a href="project-pages/personalWebsite-info.html">This Website</a></li>
         </ul>
     </section>
     <section id="school">
