--- a/index.html
+++ b/index.html
@@ -29,8 +29,7 @@
             <h1>Hi, I'm Kevin Gruich.</h1>
         </section>
         <section id="overview">
-            <p>This website serves to display my programming projects and my (minimal)
-                web development skills.</p>
+            <p>This website serves to display my programming projects and my web development skills.</p>
         </section>
         <section id="about">
             <h1>About Me</h1>
@@ -43,11 +42,13 @@
             <ul>
                 <li>Recipient of the William J. Branstrom Freshman Prize,
                     an award is given annually to first year undergraduate
-                    students whose academic achievement during their first
+                    students at the University of Michigan whose academic achievement during their first
                     Fall term on campus places them in the upper five percent
                     of their college class.
                 </li>
                 <li>Graduate of Wylie E. Groves High School</li>
+                <li>730 Subcribers on <a href="https://www.youtube.com/user/ebay765">YouTube</a> for Hobby video editing
+                </li>
                 <li>Made this website</li>
             </ul>
         </section>
